ispCP ω 1.0.6 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-04-17 Sascha Bay
	- GUI:
		* Fixed #2336: minor html fix in gui trunk

2010-04-05 Laurent Declercq
	- CONTRIB:
		* Add new script to fix bad/missing EOL
	- PACKAGE:
		* Fixed several bad/missing EOL

2010-04-11 Sascha Bay
	- GUI:
		* Fixed #2335: Add and existent user for assign to new db have issues
		
2010-04-11 Benedikt Heintel
	- DISTS:
		* Updated needed Gentoo Sources
	- GUI:
		* Refactored class spGzip
	- TOOLS:
		* Updated AWStats files to version 6.95

2010-04-09 Sascha Bay
	- GUI:
		* Fixed #2184: Blocking special chars in sqluser password (changing RegExp)

2010-04-09 Laurent Declercq
	- GUI:
		* Code re-factoring for better readability
		* Fixed: White page after a new installation
		* Fixed: Only variables should be passed by reference... in
			class.SystemInfo.php (line 558)

2010-04-09 Christian Hernmarck
	- CONFIGS:
		* added var (mta_sasldb_file) to the redhat config
	- TOOLS:
		* added a pma config var to disable the 'DisplayBinaryAsHex' by default

2010-04-09 Jochen Manz
	- GUI:
		* Simplified config handling with singleton class

2010-04-08 Sascha Bay
	- GUI:
		* Fixed #2162: Hide "Subdomain add" and/or "Alias add" from 
			./client/domains_manage.php menu when disabled
		* Fixed #2212: Wrong mail counts at reseller user statistics page
		* Fixed #2329: Reseller statistic shows 0 / 0 of -1 if disabled

2010-04-08 Benedikt Heintel
	- GUI:
		* Fixed #2326: Missing Variable in r2796
	- TOOLS:
		* Updated phpMyAdmin Configuration

2010-04-05 Benedikt Heintel
	- CONFIGS:
		* Added `df` command
	- DISTS:
		* [FreeBSD, OpenBSD]: Added `sysctl`
		* [FreeBSD]: Added `swapctl`
	- GUI:
		* Added SystemInfo class for removed phpSysInfo (part of #2053)
	- TOOLS:
		* Fixed #2324: Grouping Databases in new PMA Theme
		* Renamed ispCP phpMyAdmin Themes
		* Removed phpSysInfo Support (#2307)

2010-04-05 Laurent Declercq
	- GUI:
		* Added missing class `message` in ispcp_orderpanel.css file